--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/8ball.jpg
+    - images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
