--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  
+  fonts:
+    - family: Anton
+      fonts:
+        - asset: fonts/Anton-Regular.ttf
+    - family: OpenSans
+      fonts:
+        - asset: fonts/OpenSans-Regular.ttf
+        
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
